--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-p {
-  color: red;
+html, body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  line-height: 1.5;
 }
